Fix: UX: Set non-responsive width to 1100px
Some of our UI elements were not fitting
into things when the width was at 1050.

--- a/app/public/css/app.css
+++ b/app/public/css/app.css
@@ -55,7 +55,7 @@
   padding-right: 6em;
   padding-top: 1em; 
 
-  width: 1050px !important;  
+  width: 1100px !important;  
 
     /* horizontal offset, vertical offset, thickness, fade */
 /*    -webkit-box-shadow:  0px 0px 8px 1px rgba(44, 44, 44, 1);
